Change layout and add repo details to repositories
* Add code climate badges to Upcase and Upcase Exercises

https://trello.com/c/Hbga6QLu/445-design-for-repositories

--- a/app/assets/stylesheets/_base-lists.scss
+++ b/app/assets/stylesheets/_base-lists.scss
@@ -4,3 +4,15 @@ ol {
   padding: 0;
   list-style-type: none;
 }
+
+ul {
+  .list-title {
+    margin-bottom: .5em;
+    font-weight: 700;
+    font-size: em(22);
+  }
+
+  .number {
+    font-weight: 700;
+  }
+}
