Separate resource types into sections per topic
Color-coded topic banners

https://trello.com/c/38towX5k/470-new-design-for-resources-aka-topic-page

--- a/app/assets/stylesheets/_base-variables.scss
+++ b/app/assets/stylesheets/_base-variables.scss
@@ -43,7 +43,7 @@ $design: #E8E9FF;
 $foundations: #DAFFCB;
 $haskell: #FFE7FD;
 $ios: #D7ECFF;
-$javascript: #FFE19B;
+$javascript: #FFE8CA;
 $rails: #FFECEE;
 $test-driven-development: #E5FDF4;
 $vim: #E1F5FF;
