--- a/app/views/resources/_topic.html.erb
+++ b/app/views/resources/_topic.html.erb
@@ -1,5 +1,20 @@
-<section class="resources-container">
+<section class="topic-resources">
+  <span class="divider">
+    <h4 class="text">Your Trails</h4>
+  </span>
+
+  <span class="divider">
+    <h4 class="text">All Trails</h4>
+  </span>
+
+  <span class="divider">
+    <h4 class="text">The Weekly Iteration</h4>
+  </span>
+
+  <span class="divider">
+    <h4 class="text">Video Tutorials</h4>
+  </span>
   <% topic.resources.each do |resource| %>
-    <%= render partial: "products/#{resource.to_partial_path}", object: resource %>
+  <%= render partial: "products/#{resource.to_partial_path}", object: resource %>
   <% end %>
 </section>
