Spike of categorized resources#index

--- a/app/views/practice/_incomplete_trail.html.erb
+++ b/app/views/practice/_incomplete_trail.html.erb
@@ -3,7 +3,7 @@
     <header>
       <h1><%= link_to trail.name, trail %></h1>
       <p class="description"><%= trail.description %></p>
-      <%= render 'trail_description_tooltip', trail: trail %>
+      <%= render "practice/trail_description_tooltip", trail: trail %>
     </header>
 
     <%= render "trails/exercise_dots", trail: trail %>
