--- a/app/views/resources/_topic.html.erb
+++ b/app/views/resources/_topic.html.erb
@@ -1,21 +1,26 @@
 <section class="topic-resources">
-  <span class="divider">
-    <h4 class="text">Your Trails</h4>
-  </span>
-
-  <span class="divider">
-    <h4 class="text">All Trails</h4>
-  </span>
+  <% if @trail %>
+    <span class="divider">
+      <h4 class="text">Trail</h4>
+    </span>
+    <section class="trails-progress">
+      <%= render "practice/trail", trail: @trail %>
+    </section>
+  <% end %>
 
   <span class="divider">
     <h4 class="text">The Weekly Iteration</h4>
   </span>
+  <% @resources["Video"].each do |resource| %>
+    <%= render partial: "products/#{resource.to_partial_path}",
+      object: resource %>
+  <% end %>
 
   <span class="divider">
     <h4 class="text">Video Tutorials</h4>
   </span>
-
-  <% topic.resources.each do |resource| %>
-    <%= render partial: "products/#{resource.to_partial_path}", object: resource %>
+  <% @resources["VideoTutorial"].each do |resource| %>
+    <%= render partial: "products/#{resource.to_partial_path}",
+      object: resource %>
   <% end %>
 </section>
